--- a/.github/workflows/githubPages.yml
+++ b/.github/workflows/githubPages.yml
@@ -1,6 +1,10 @@
 # Simple workflow for deploying static content to GitHub Pages
 name: Deploy to Github Pages
 
+on:
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 # Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
   contents: read
